--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>simple web</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>
-        web
-    </h1>
+    <div>
+        <h3>
+            my first website
+        </h3>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur dolorum eveniet maxime est facilis debitis illum, ex voluptas repellendus beatae praesentium cum, tempora consequatur eligendi id repellat distinctio incidunt ipsa.
+        </p>
+    </div>
 </body>
 </html>
